--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en-ca">
 <head>
     <meta charset="utf-8">
-    <title>Exterminate!</title>
+    <title>Wanted!</title>
+    <link href='http://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
     <link href="css/grid.css" rel="stylesheet">
     <link href="css/type.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
@@ -10,7 +11,7 @@
 </head>
 <body>
     
-<h1>Exterminate</h1>
+<h1>Wanted!</h1>
     
 </body>
 </html>
